# occurrence-web

./: .gitignore  compose.dev.yaml  compose.yaml
backend/: .gitignore  Cargo.toml  compose.yaml  test.md
backend/src/: app.rs  config.rs  lib.rs  main.rs  openapi.rs  state.rs
backend/src/features/: mod.rs
backend/src/features/auth/: dto.rs  handler.rs  mail.rs  mod.rs  repository.rs  service.rs
backend/src/features/media/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/features/occurrences/: dto.rs  handler.rs  mod.rs  repository.rs  service.rs
backend/src/infrastructure/: fuseki.rs  garage.rs  mod.rs
frontend/: .env.example  README.md  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/occurrences/new/: page.tsx
frontend/src/app/occurrences/search/: page.tsx
frontend/src/components/: site-header.tsx
frontend/src/lib/: api.ts
postgreSQL/migrations/: 20260424_1_create_auth_tables.sql  20260513_1_add_session_table.sql  20260619_1_add_password_reset.sql  20260627_1_add_media_objects.sql  20260701_1_add_media_sha256.sql
spec/: 00_development_rules.md  01_system_overview.md  02_architecture.md  03_auth.md  04_authorization_policy.md  05_occurrence_rdf.md  06_shacl_validation.md  07_media.md  08_search.md  09_export.md  10_audit_log.md  11_api_contract.md  12_frontend_screens.md  13_infra_and_env.md  14_testing_strategy.md  15_feature.md  README.md
