[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
tokio =  { version = "1", features = ["full"] }
dotenvy = "0.15"
utoipa = "5"
utoipa-axum = "0.2"
utoipa-scalar = "0.3"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tower = { version = "0.5", features =["util"]}