[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["multipart"] }
tokio =  { version = "1.52.0", features = ["full"] }
dotenvy = "0.15"
utoipa = {version = "5.5", features = ["uuid"] }
utoipa-axum = "0.2"
utoipa-scalar = "0.3"
utoipa-swagger-ui = {version = "9", features = ["axum"]}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
tower = { version = "0.5", features =["util"]}
email_address = "0.2.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
] }
hex = "0.4.3"
sha2 = "0.11.0"
uuid = { version = "1.23.1", features = ["v4","serde"] }
async-trait = "0.1"
lettre = { version = "0.11", default-features = false, features = [
    "builder",
    "hostname",
    "smtp-transport",
    "tokio1",
    "tokio1-native-tls",
] }
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
oxrdf = "0.3.3"
oxrdfio = "0.2.5"
reqwest = { version = "0.13.3", default-features = false, features = ["rustls", "json", "stream"] }
infer = "0.19.0"
tempfile = "3.27.0"
tokio-util = { version = "0.7", features = ["io"] }
